Initial Look & Feel.

--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>{{title}}</h1>
+<h1 class="spatitle">{{title}}</h1>
+<hr class="titlehr">
+<div class="inputcontainer">
+	<div class="v1">
+		<div class="conditional">(OR)</div>
+	</div>
+</div>
