--- a/src/main/root/src/app/app.component.css
+++ b/src/main/root/src/app/app.component.css
@@ -6,15 +6,15 @@
 
 .titlehr {
 	margin-left: 28%;
-	margin-top: -25px;
+	margin-top: -8px;
 	width: 415px;
 }
 
 .inputcontainer {
 	border-radius: 25px;
 	border: 1px dotted gray;
-	width: 100%;
-	height: 150px;
+	width: 110%;
+	height: 170px;
 }
 
 .v1 {
@@ -23,11 +23,30 @@
 	position: absolute;
 	left: 50%;
 	margin-left: -3px;
-	top: 110px;
+	top: 130px;
+}
+
+.dynamicdatagenerator {
+	margin-left: 65px;	
 }
 
 .conditional {
 	text-align: left;
 	margin-left: -18px;
 	margin-top: 50px;
+}
+
+.staticdatagenerator {
+	margin-top: -108px;
+	margin-left: 65px;
+}
+
+.file-input {
+  display: none;
+}
+
+.alert {
+	margin-top: -3px;
+    height: 35px;
+    color: red;
 }
