--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -1,7 +1,61 @@
 <h1 class="spatitle">{{title}}</h1>
 <hr class="titlehr">
 <div class="inputcontainer">
+	<div class="dynamicdatagenerator">
+		<h4>
+			<u>For Dynamic Report :</u>
+		</h4>
+	</div>
 	<div class="v1">
 		<div class="conditional">(OR)</div>
+		<div class="staticdatagenerator">
+			<h4>
+				<u>Upload CSV File :</u>
+			</h4>
+			<br>
+			<div class="row">
+				<div class="col-8">
+					<label class="btn btn-default p-0">
+						<input type="file" #inputfile (change)="selectFile($event)" />
+					</label>
+				</div>
+				<div class="col-4">
+					<button class="btn btn-success btn-sm" [disabled]="!selectedFiles" (click)="upload()">Upload</button>
+				</div>
+			</div>
+			<div *ngIf="currentFile" class="progress my-3">
+				<div class="progress-bar progress-bar-info" role="progressbar" attr.aria-valuenow="{{ progress }}" aria-valuemin="0" aria-valuemax="90" [ngStyle]="{ width: progress + '%' }">{{ progress }}%</div>
+			</div>
+			<div *ngIf="message" class="alert alert-secondary" role="alert">{{message }}</div>
+		</div>
 	</div>
+</div>
+<div *ngIf="blotterData" class="tabularResult">
+<br><hr>
+	<table class="table table-stripped table-bordered">
+		<thead>
+			<tr>
+				<th>Trade Id</th>
+				<th>Spot Price</th>
+				<th>Strike Price</th>
+				<th>Time To Maturity</th>
+				<th>IR</th>
+				<th>Sigma</th>
+				<th>Option Price</th>
+				<th>Time Taken</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr *ngFor="let data of blotterData">
+				<td>{{blotterData.TradeId}}</td>
+				<td>{{blotterData.Spot}}</td>
+				<td>{{blotterData.Strike}}</td>
+				<td>{{blotterData.timeToMaturity}}</td>
+				<td>{{blotterData.IR}}</td>
+				<td>{{blotterData.Sigma}}</td>
+				<td>{{blotterData.OptionPrice}}</td>
+				<td>{{blotterData.timeTaken}}</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
