--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -30,32 +30,60 @@
 		</div>
 	</div>
 </div>
-<div *ngIf="blotterData" class="tabularResult">
-<br><hr>
-	<table class="table table-stripped table-bordered">
-		<thead>
-			<tr>
-				<th>Trade Id</th>
-				<th>Spot Price</th>
-				<th>Strike Price</th>
-				<th>Time To Maturity</th>
-				<th>IR</th>
-				<th>Sigma</th>
-				<th>Option Price</th>
-				<th>Time Taken</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr *ngFor="let data of blotterData">
-				<td>{{data.tradeId}}</td>
-				<td>{{data.spot}}</td>
-				<td>{{data.strike}}</td>
-				<td>{{data.timeToMaturity}}</td>
-				<td>{{data.ir}}</td>
-				<td>{{data.sigma}}</td>
-				<td>{{data.optionPrice}}</td>
-				<td>{{data.timeTaken}}</td>
-			</tr>
-		</tbody>
+<div *ngIf="dataSource" class="tabularResult">
+	<br><hr>
+	<mat-form-field> <mat-label>Filter</mat-label>
+		<input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+	</mat-form-field>
+
+	<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+		
+		<ng-container matColumnDef="TradeId">
+			<th mat-header-cell *matHeaderCellDef>Trade Id</th>
+			<td mat-cell *matCellDef="let element">{{element.TradeId}}</td>
+		</ng-container>
+
+		<ng-container matColumnDef="Spot">
+			<th mat-header-cell *matHeaderCellDef>Spot Price</th>
+			<td mat-cell *matCellDef="let element">{{element.Spot}}</td>
+		</ng-container>
+
+		<ng-container matColumnDef="Strike">
+			<th mat-header-cell *matHeaderCellDef>Strike Price</th>
+			<td mat-cell *matCellDef="let element">{{element.Strike}}</td>
+		</ng-container>
+		
+		<ng-container matColumnDef="timeToMaturity">
+			<th mat-header-cell *matHeaderCellDef>Time To Maturity</th>
+			<td mat-cell *matCellDef="let element">{{element.timeToMaturity}}</td>
+		</ng-container>
+		
+		<ng-container matColumnDef="IR">
+			<th mat-header-cell *matHeaderCellDef>IR</th>
+			<td mat-cell *matCellDef="let element">{{element.IR}}</td>
+		</ng-container>
+		
+		<ng-container matColumnDef="Sigma">
+			<th mat-header-cell *matHeaderCellDef>Sigma</th>
+			<td mat-cell *matCellDef="let element">{{element.Sigma}}</td>
+		</ng-container>
+		
+		<ng-container matColumnDef="OptionPrice">
+			<th mat-header-cell *matHeaderCellDef>Option Price</th>
+			<td mat-cell *matCellDef="let element">{{element.OptionPrice}}</td>
+		</ng-container>
+		
+		<ng-container matColumnDef="timeTaken">
+			<th mat-header-cell *matHeaderCellDef>Time Taken</th>
+			<td mat-cell *matCellDef="let element">{{element.timeTaken}}</td>
+		</ng-container>
+
+		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+		<!-- Row shown when there is no matching data. -->
+		<tr class="mat-row" *matNoDataRow>
+			<td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+		</tr>
 	</table>
 </div>
