--- a/src/main/root/src/app/app.component.css
+++ b/src/main/root/src/app/app.component.css
@@ -13,21 +13,21 @@
 .inputcontainer {
 	border-radius: 25px;
 	border: 1px dotted gray;
-	width: 110%;
-	height: 170px;
+	width: 100%;
+	height: 120px;
 }
 
 .v1 {
 	border-left: 2px dotted gray;
 	height: 100px;
 	position: absolute;
-	left: 50%;
-	margin-left: -3px;
-	top: 130px;
+	left: 45%;
+	top: 90px;
 }
 
 .dynamicdatagenerator {
 	margin-left: 65px;	
+	display: inline-block;
 }
 
 .conditional {
@@ -37,7 +37,7 @@
 }
 
 .staticdatagenerator {
-	margin-top: -108px;
+	margin-top: -80px;
 	margin-left: 65px;
 }
 
@@ -49,4 +49,17 @@
 	margin-top: -3px;
     height: 35px;
     color: red;
+}
+
+.tabularResult{
+	height: 300px;
+}
+
+.upload{
+	margin-top: 0;
+	margin-left: 20px;
+}
+
+.table-align{
+	margin-left: -160px;
 }
