--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -1,33 +1,7 @@
 <h2 class="spatitle">{{title}}</h2>
 <hr class="titlehr">
-<div class="inputcontainer">
-	<div class="dynamicdatagenerator">
-		<h3>
-			<u>For Dynamic Report :</u>
-		</h3>
-	</div>
-	<div class="v1">
-		<div class="conditional">(OR)</div>
-		<div class="staticdatagenerator">
-			<h3>
-				<u>Upload CSV File :</u>
-			</h3>
-			<div class="row">
-				<div class="col-8">
-					<label class="btn btn-default p-0">
-						<input type="file" #inputfile (change)="selectFile($event)" />
-					</label>
-				</div>
-				<div class="col-4">
-					<button class="btn btn-success btn-sm upload" [disabled]="!selectedFiles" (click)="upload()">Upload</button>
-				</div>
-			</div>
-			<div *ngIf="currentFile" class="progress my-3">
-				<div class="progress-bar progress-bar-info" role="progressbar" attr.aria-valuenow="{{ progress }}" aria-valuemin="0" aria-valuemax="90" [ngStyle]="{ width: progress + '%' }">{{ progress }}%</div>
-			</div>
-			<div *ngIf="message" class="alert alert-secondary" role="alert">{{message }}</div>
-		</div>
-	</div>
+<div class="col-6">
+  <button class="btn btn-success btn-sm upload" (click)="loadInstruments()">Load Instruments</button>
 </div>
 <div *ngIf="dataSource" class="tabularResult">
 	<hr>
@@ -36,7 +10,7 @@
 	</mat-form-field>
 
 	<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table-align">
-		
+
 		<ng-container matColumnDef="TradeId">
 			<th mat-header-cell *matHeaderCellDef>Trade Id</th>
 			<td mat-cell *matCellDef="let element">{{element.tradeId}}</td>
@@ -51,27 +25,27 @@
 			<th mat-header-cell *matHeaderCellDef>Strike Price</th>
 			<td mat-cell *matCellDef="let element">{{element.strike}}</td>
 		</ng-container>
-		
+
 		<ng-container matColumnDef="timeToMaturity">
 			<th mat-header-cell *matHeaderCellDef>Time To Maturity</th>
 			<td mat-cell *matCellDef="let element">{{element.timeToMaturity}}</td>
 		</ng-container>
-		
+
 		<ng-container matColumnDef="IR">
 			<th mat-header-cell *matHeaderCellDef>IR</th>
 			<td mat-cell *matCellDef="let element">{{element.ir}}</td>
 		</ng-container>
-		
+
 		<ng-container matColumnDef="Sigma">
 			<th mat-header-cell *matHeaderCellDef>Sigma</th>
 			<td mat-cell *matCellDef="let element">{{element.sigma}}</td>
 		</ng-container>
-		
+
 		<ng-container matColumnDef="OptionPrice">
 			<th mat-header-cell *matHeaderCellDef>Option Price</th>
 			<td mat-cell *matCellDef="let element">{{element.optionPrice}}</td>
 		</ng-container>
-		
+
 		<ng-container matColumnDef="timeTaken">
 			<th mat-header-cell *matHeaderCellDef>Time Taken</th>
 			<td mat-cell *matCellDef="let element">{{element.timeTaken}}</td>
