--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -59,9 +59,5 @@
 			<td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
 		</tr>
 	</table>
-	<mat-paginator [length]="dataSource.length"
-              [pageSize]="100"
-              [pageSizeOptions]="[100, 500, 1000, 2000]"
-              aria-label="Select page">
-	</mat-paginator>
+	<mat-paginator [length]="dataSource.length" [pageSize]="100" [pageSizeOptions]="[100, 500, 1000, 2000]" aria-label="Select page"></mat-paginator>
 </div>
