--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -14,59 +14,62 @@
 </mat-tab-group>
 <div *ngIf="dataSource && displayTab1" class="tabularResult">
   <br>
-	<mat-form-field>Search Instrument<mat-label></mat-label>
+	<mat-form-field>Search<mat-label></mat-label>
 		<input matInput (keyup)="applyFilter($event)" placeholder="" #input>
 	</mat-form-field>
 
-	<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table-align">
+  <div class="example-container mat-elevation-z8">
 
-		<ng-container matColumnDef="ticker">
-			<th mat-header-cell *matHeaderCellDef>Ticker</th>
-			<td mat-cell *matCellDef="let element">{{element.ticker}}</td>
-		</ng-container>
+    <mat-table mat-table [dataSource]="dataSource" matSort>
 
-		<ng-container matColumnDef="spotPrice">
-			<th mat-header-cell *matHeaderCellDef>Spot Price</th>
-			<td mat-cell *matCellDef="let element">{{element.spotPrice}}</td>
-		</ng-container>
+      <ng-container matColumnDef="ticker">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Ticker</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.ticker}}</mat-cell>
+      </ng-container>
 
-		<ng-container matColumnDef="strikePrice">
-			<th mat-header-cell *matHeaderCellDef>Strike Price</th>
-			<td mat-cell *matCellDef="let element">{{element.strikePrice}}</td>
-		</ng-container>
+      <ng-container matColumnDef="spotPrice">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Spot Price</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.spotPrice}}</mat-cell>
+      </ng-container>
 
-		<ng-container matColumnDef="expiry">
-			<th mat-header-cell *matHeaderCellDef>Expiry/ Time To Maturity</th>
-			<td mat-cell *matCellDef="let element">{{element.expiry}}</td>
-		</ng-container>
+      <ng-container matColumnDef="strikePrice">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Strike Price</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.strikePrice}}</mat-cell>
+      </ng-container>
 
-		<ng-container matColumnDef="volatility">
-			<th mat-header-cell *matHeaderCellDef>Volatility/ Sigma</th>
-			<td mat-cell *matCellDef="let element">{{element.volatility}}</td>
-		</ng-container>
+      <ng-container matColumnDef="expiry">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Expiry/ Time To Maturity</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.expiry}}</mat-cell>
+      </ng-container>
 
-		<ng-container matColumnDef="optionPrice">
-			<th mat-header-cell *matHeaderCellDef>Option Price</th>
-			<td mat-cell *matCellDef="let element">{{element.optionPrice}}</td>
-		</ng-container>
+      <ng-container matColumnDef="volatility">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Volatility/ Sigma</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.volatility}}</mat-cell>
+      </ng-container>
 
-		<ng-container matColumnDef="predictedPrice">
-			<th mat-header-cell *matHeaderCellDef>Predicted Price</th>
-			<td mat-cell *matCellDef="let element">{{element.predictedPrice}}</td>
-		</ng-container>
+      <ng-container matColumnDef="optionPrice">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Option Price</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.optionPrice}}</mat-cell>
+      </ng-container>
 
-		<ng-container matColumnDef="timeTaken">
-			<th mat-header-cell *matHeaderCellDef>Time Taken</th>
-			<td mat-cell *matCellDef="let element">{{element.timeTaken}}</td>
-		</ng-container>
+      <ng-container matColumnDef="predictedPrice">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Predicted Price</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.predictedPrice}}</mat-cell>
+      </ng-container>
 
-		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <ng-container matColumnDef="timeTaken">
+        <mat-header-cell *matHeaderCellDef mat-sort-header>Time Taken</mat-header-cell>
+        <mat-cell *matCellDef="let element">{{element.timeTaken}}</mat-cell>
+      </ng-container>
 
-		<!-- Row shown when there is no matching data. -->
-		<tr class="mat-row" *matNoDataRow>
-			<td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-		</tr>
-	</table>
-	<mat-paginator [length]="dataSource.length" [pageSize]="100" [pageSizeOptions]="[100, 500, 1000, 2000]" aria-label="Select page"></mat-paginator>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </mat-table>
+  </div>
+  <mat-paginator [length]="dataSource.length" [pageSize]="100" [pageSizeOptions]="[100, 500, 1000, 2000]" aria-label="Select page"></mat-paginator>
 </div>
