--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -1,17 +1,17 @@
 <h1 class="spatitle">{{title}}</h1>
-<hr class="titlehr"><br><br>
+<hr class="titlehr"><br>
 <mat-tab-group (selectedTabChange)="onChange($event)">
   <mat-tab label="{{tab1Title}}">
-    <ng-template mat-tab-label>
-      <mat-icon *ngIf="displayTab1" class="example-tab-icon">thumb_up</mat-icon><h3>{{tab1Title}}</h3>
+    <ng-template mat-tab-label class="example-tab">
+      <h3 class="tabTile">{{tab1Title}}</h3>
     </ng-template>
   </mat-tab>
   <mat-tab label="{{tab2Title}}">
     <ng-template mat-tab-label>
-      <mat-icon *ngIf="displayTab2" class="example-tab-icon">thumb_up</mat-icon><h3>{{tab2Title}}</h3>
+      <h3 class="tabTile">{{tab2Title}}</h3>
     </ng-template>
   </mat-tab>
-</mat-tab-group>
+</mat-tab-group><br>
 <div *ngIf="dataSource && displayTab1" class="tabularResult">
   <br>
 	<mat-form-field>Search<mat-label></mat-label>
@@ -27,5 +27,5 @@
       <mat-row matRipple [ngClass]="((row['num']%2) == 1) ? 'row-single' : 'row-double'" *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
   </div>
-  <mat-paginator showFirstLastButtons [length]="dataSource.data?.length" [pageSize]="50" [pageSizeOptions]="[100, 500, 1000, 2000]" aria-label="Select page"></mat-paginator>
+  <mat-paginator [length]="dataSource.data?.length" [pageSize]="50" [pageSizeOptions]="[100, 500, 1000, 2000]" aria-label="Select page" showFirstLastButtons></mat-paginator>
 </div>
