--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -20,7 +20,7 @@
   <div class="example-container">
     <mat-table [dataSource]="dataSource" matSort>
       <ng-container *ngFor="let col of displayedColumns" [matColumnDef]="col">
-        <mat-header-cell class="table-header header-p" *matHeaderCellDef><b>{{col}}</b></mat-header-cell>
+        <mat-header-cell class="table-header header-p" *matHeaderCellDef  mat-sort-header><b>{{col}}</b></mat-header-cell>
         <mat-cell class="table-content context-position" *matCellDef="let element">{{element[col]}}</mat-cell>
       </ng-container>
       <mat-header-row class="table-header header-p-row" *matHeaderRowDef="displayedColumns"></mat-header-row>
