--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -14,18 +14,21 @@
 </mat-tab-group><br>
 <div *ngIf="dataSource && displayTab1" class="tabularResult">
   <br>
-	<mat-form-field>Search<mat-label></mat-label>
-		<input matInput (keyup)="applyFilter($event)" placeholder="" #input>
-	</mat-form-field>
+  <mat-form-field>Search<mat-label></mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
+  </mat-form-field>
   <div class="example-container">
     <mat-table [dataSource]="dataSource" matSort>
       <ng-container *ngFor="let col of displayedColumns" [matColumnDef]="col">
-        <mat-header-cell class="table-header header-p" *matHeaderCellDef  mat-sort-header><b>{{col}}</b></mat-header-cell>
+        <mat-header-cell class="table-header header-p" *matHeaderCellDef
+          mat-sort-header><b>{{col}}</b></mat-header-cell>
         <mat-cell class="table-content context-position" *matCellDef="let element">{{element[col]}}</mat-cell>
       </ng-container>
       <mat-header-row class="table-header header-p-row" *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row matRipple [ngClass]="((row['num']%2) == 1) ? 'row-single' : 'row-double'" *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      <mat-row matRipple class="{{row.cellHighlightColor}}"
+        *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
   </div><br>
-  <mat-paginator [length]="dataSource.data?.length" [pageSize]="50" [pageSizeOptions]="[50, 100, 500, 1000, 2000]" aria-label="Select page" showFirstLastButtons></mat-paginator>
+  <mat-paginator [length]="dataSource.data?.length" [pageSize]="50" [pageSizeOptions]="[50, 100, 500, 1000, 2000]"
+    aria-label="Select page" showFirstLastButtons></mat-paginator>
 </div>
