--- a/src/main/root/src/app/app.component.css
+++ b/src/main/root/src/app/app.component.css
@@ -99,9 +99,9 @@
 }
 
 .red-cell{
-	background-color: red !important;
+	background-color: #FF6347 !important;
 }
 
 .green-cell{
-	background-color: green !important;
+	background-color: #90EE90 !important;
 }
