--- a/src/main/root/src/app/app.component.css
+++ b/src/main/root/src/app/app.component.css
@@ -2,6 +2,11 @@ body {
   max-width: 1500px;
 }
 
+.mat-column-contractSymbol {
+    flex: 0 0 15% !important;
+    min-width: 104px !important;
+}
+
 .spatitle {
 	justify-content: center;
 	margin-left: 33%;
