--- a/src/main/root/src/app/app.component.css
+++ b/src/main/root/src/app/app.component.css
@@ -2,9 +2,18 @@ body {
   max-width: 1500px;
 }
 
+.mat-column-ticker {
+    flex: 0 0 3% !important;
+    min-width: 80px !important;
+}
+
 .mat-column-contractSymbol {
-    flex: 0 0 15% !important;
+    flex: 0 0 18% !important;
     min-width: 104px !important;
+}
+.mat-column-expirationDate {
+    flex: 0 0 11% !important;
+    min-width: 90px !important;
 }
 
 .spatitle {
