--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -21,7 +21,7 @@
     <mat-table [dataSource]="dataSource" matSort>
       <ng-container *ngFor="let col of displayedColumns" [matColumnDef]="col">
         <mat-header-cell class="table-header header-p" *matHeaderCellDef mat-sort-header><b>{{col}}</b></mat-header-cell>
-        <mat-cell class="table-content context-position" [ngStyle]="{'background-color': getStyle(element, col)}" 
+        <mat-cell class="table-content context-position" [ngStyle]="{'background-color': getBackgroundColor(element, col), 'border-radius' : getBorderRadius(element, col)}"
            *matCellDef="let element">{{element[col]}}</mat-cell>
       </ng-container>
       <mat-header-row class="table-header header-p-row" *matHeaderRowDef="displayedColumns"></mat-header-row>
