--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -1,5 +1,4 @@
-<h1 class="spatitle">{{title}}</h1>
-<hr class="titlehr"><br>
+<h2 class="spatitle">{{title}}</h2>
 <mat-tab-group (selectedTabChange)="onChange($event)">
   <mat-tab label="{{tab1Title}}">
     <ng-template mat-tab-label class="example-tab">
@@ -11,12 +10,17 @@
       <h3 class="tabTile">{{tab2Title}}</h3>
     </ng-template>
   </mat-tab>
-</mat-tab-group><br>
+</mat-tab-group>
 <div *ngIf="dataSource && displayTab1" class="tabularResult">
-  <br>
-  <mat-form-field>Search<mat-label></mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
-  </mat-form-field>
+  <div style="position: absolute;margin-top: 10px;">
+    <mat-form-field>Search<mat-label></mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
+    </mat-form-field>
+  </div>
+  <div>
+    <mat-paginator [length]="dataSource.data?.length" [pageSize]="10" [pageSizeOptions]="[10, 50, 100, 500]"
+    aria-label="Select page" showFirstLastButtons></mat-paginator>
+  </div>
   <div class="example-container">
     <mat-table [dataSource]="dataSource" matSort>
       <ng-container *ngFor="let col of displayedColumns" [matColumnDef]="col">
@@ -28,6 +32,5 @@
       <mat-row matRipple *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
   </div><br>
-  <mat-paginator [length]="dataSource.data?.length" [pageSize]="50" [pageSizeOptions]="[50, 100, 500, 1000, 2000]"
-    aria-label="Select page" showFirstLastButtons></mat-paginator>
+  
 </div>
