--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -19,18 +19,30 @@
   </div>
   <div>
     <mat-paginator [length]="dataSource.data?.length" [pageSize]="10" [pageSizeOptions]="[10, 50, 100, 500]"
-    aria-label="Select page" showFirstLastButtons></mat-paginator>
+      aria-label="Select page" showFirstLastButtons></mat-paginator>
   </div>
   <div class="example-container">
     <mat-table [dataSource]="dataSource" matSort>
       <ng-container *ngFor="let col of displayedColumns" [matColumnDef]="col">
-        <mat-header-cell class="table-header header-p" *matHeaderCellDef mat-sort-header><b>{{col}}</b></mat-header-cell>
-        <mat-cell class="table-content context-position" [ngStyle]="{'background-color': getBackgroundColor(element, col), 'border-radius' : getBorderRadius(element, col)}"
-           *matCellDef="let element">{{element[col]}}</mat-cell>
+        <mat-header-cell class="table-header header-p" *matHeaderCellDef
+          mat-sort-header><b>{{col}}</b></mat-header-cell>
+        <div *ngIf="col!=='spotPrice'">
+          <mat-cell class="table-content context-position" *matCellDef="let element">
+            {{element[col]}}
+          </mat-cell>
+        </div>
+        <div *ngIf="col==='spotPrice'">
+          <mat-cell class="table-content context-position" *matCellDef="let element" style="border-radius: 5px"
+            [ngStyle]="{'background-color': getBackgroundColor(element, col)}">
+            <span *ngIf="element.valid===1"><mat-icon color="primary">trending_up</mat-icon>{{element[col]}}</span>
+            <span *ngIf="element.valid===-1"><mat-icon color="warn">trending_down</mat-icon>{{element[col]}}</span>
+            <span *ngIf="element.valid===0">{{element[col]}}</span>
+          </mat-cell>
+        </div>
       </ng-container>
       <mat-header-row class="table-header header-p-row" *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row matRipple *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
   </div><br>
-  
+
 </div>
