--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -13,30 +13,30 @@
 </mat-tab-group>
 <div *ngIf="dataSource && displayTab1" class="tabularResult">
   <div style="position: absolute;margin-top: 10px;">
-    <mat-form-field>Search<mat-label></mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
+    <mat-form-field><mat-label>Search</mat-label>
+      <input style="height: 50px;margin-top: 25px;" matInput (keyup)="applyFilter($event)" placeholder="" #input>
     </mat-form-field>
+    <div class="simulatorToggle">
+      <span>Simulation Enabled ?</span><mat-slide-toggle class="simulatorToggleTitle" [checked]="isSimulationEnabled" (change)="toggle($event)"></mat-slide-toggle>
+    </div>
+    <button class="refreshButton" (click)="refresh()"><mat-icon>refresh</mat-icon></button>
   </div>
   <div>
-    <mat-paginator [length]="dataSource.data?.length" [pageSize]="10" [pageSizeOptions]="[10, 50, 100, 500]"
+    <mat-paginator [length]="dataSource.data?.length" [pageSize]="10" [pageSizeOptions]="[10, 20, 50, 100, 500, 1000, 2000]"
       aria-label="Select page" showFirstLastButtons></mat-paginator>
   </div>
   <div class="example-container">
     <mat-table [dataSource]="dataSource" matSort>
       <ng-container *ngFor="let col of displayedColumns" [matColumnDef]="col">
-        <mat-header-cell class="table-header header-p" *matHeaderCellDef
-          mat-sort-header><b>{{col}}</b></mat-header-cell>
-        <div *ngIf="col!=='spotPrice'">
-          <mat-cell class="table-content context-position" *matCellDef="let element">
-            {{element[col]}}
-          </mat-cell>
+        <mat-header-cell class="table-header header-p" *matHeaderCellDef mat-sort-header><b>{{col}}</b></mat-header-cell>
+        <div *ngIf="col !== 'spotPrice'">
+          <mat-cell class="table-content context-position" *matCellDef="let element">{{element[col]}}</mat-cell>
         </div>
-        <div *ngIf="col==='spotPrice'">
-          <mat-cell class="table-content context-position" *matCellDef="let element" style="border-radius: 5px"
-            [ngStyle]="{'background-color': getBackgroundColor(element, col)}">
+        <div *ngIf="col === 'spotPrice'">
+          <mat-cell class="table-content context-position" *matCellDef="let element" style="border-radius: 5px" [ngStyle]="{'background-color': getBackgroundColor(element, col)}">
             <span *ngIf="element.valid===1"><mat-icon color="primary">trending_up</mat-icon>{{element[col]}}</span>
             <span *ngIf="element.valid===-1"><mat-icon color="warn">trending_down</mat-icon>{{element[col]}}</span>
-            <span *ngIf="element.valid===0">{{element[col]}}</span>
+            <span *ngIf="element.valid===0 || !isSimulationEnabled">{{element[col]}}</span>
           </mat-cell>
         </div>
       </ng-container>
