--- a/src/main/root/src/app/app.component.css
+++ b/src/main/root/src/app/app.component.css
@@ -61,44 +61,48 @@ body {
   border-radius: 10px;
 }
 
-.inputcontainer {
+.displayTab2 .inputcontainer {
   border-radius: 25px;
   border: 1px dotted gray;
-  width: 100%;
-  height: 120px;
+  width: 93.5%;
+  height: 250px;
 }
 
-.v1 {
+.mat-mdc-form-field-flex {
+  height: auto;
+}
+
+.mat-mdc-form-field-input-control.mat-mdc-form-field-input-control {
+  margin-top: 20px;
+}
+
+.mat-mdc-form-field {
+  margin-bottom: 20px;
+}
+
+.displayTab2 .addInstrumentButton {
+  margin-top: -15px;
+  margin-left: 10%;
+  color: blue;
+}
+
+.displayTab2 .resetButton {
+  margin: 17% -0.5% 0 0;
+  float: right;
+  color: red;
+}
+
+.displayTab2 .v1 {
   border-left: 2px dotted gray;
-  height: 100px;
+  height: 235px;
   position: absolute;
-  left: 45%;
-  top: 90px;
+  left: 25%;
+  top: 130px;
 }
 
-.dynamicdatagenerator {
-  margin-left: 65px;
-  display: inline-block;
-}
-
-.conditional {
-  text-align: left;
-  margin-left: -18px;
-  margin-top: 50px;
-}
-
-.staticdatagenerator {
-  margin-top: -80px;
-  margin-left: 65px;
-}
-
-.file-input {
-  display: none;
-}
-
-.alert {
-  margin-top: -3px;
-  height: 35px;
+.displayTab2 .alert {
+  margin: 8px;
+  height: 30px;
   color: red;
 }
 
