--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -44,5 +44,40 @@
       <mat-row matRipple *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
   </div><br>
+</div>
 
+
+<div *ngIf="displayTab2" class="displayTab2">
+  <div style="position: absolute;margin-top: 10px;" class="inputcontainer">
+    <mat-card>
+      <mat-card-content>
+        <form [formGroup]="form" (ngSubmit)="saveDetails(form)" autocomplete="off">
+          <div>
+            <mat-form-field>
+              <mat-label>Ticker :</mat-label>
+              <input matInput placeholder="Enter ticker symbol" formControlName="ticker">
+              <mat-icon matPrefix>extension</mat-icon>
+              <mat-error *ngIf="form.controls['ticker'].errors?.['required']" class="alert">Ticker is required</mat-error>
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field>
+              <mat-label>Contract ID :</mat-label>
+              <input matInput formControlName="contractId" placeholder="Enter contract id">
+              <mat-icon matPrefix>account_balance</mat-icon>
+              <mat-error *ngIf="form.controls['contractId'].errors?.['required']" class="alert">Contract ID is required</mat-error>
+            </mat-form-field>
+          </div>
+          <div class="addInstrumentButton">
+            <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid">Add Instrument</button>
+          </div>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div class="v1"></div>
+
+  <div class="resetButton">
+    <button mat-raised-button color="primary" type="submit"(click)="reset()">Reset</button>
+  </div>
 </div>
