--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -99,9 +99,9 @@
               </mat-form-field>
             </div>
             <div class="addInstrumentButton">
-              <button mat-raised-button color="primary" type="submit" [disabled]="!sportPriceForm.valid"*ngIf="!isSpotPriceSaved">Save Spot Price</button>
+              <button mat-raised-button color="primary" type="submit" [disabled]="!sportPriceForm.valid">Generate Price</button>
             </div>
-            {{spotPrice}}
+            Option/ Predicted Price: {{spotPrice}}
           </form>
         </mat-card-content>
       </mat-card>
