--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -56,7 +56,7 @@
             <mat-form-field>
               <mat-label>Ticker :</mat-label>
               <input matInput placeholder="Enter ticker symbol" formControlName="ticker">
-              <mat-icon matPrefix>extension</mat-icon>
+              <mat-icon matPrefix>photo_size_select_actual</mat-icon>
               <mat-error *ngIf="form.controls['ticker'].errors?.['required']" class="alert">Ticker is required</mat-error>
             </mat-form-field>
           </div>
@@ -94,7 +94,7 @@
               <mat-form-field>
                 <mat-label>Spot Price :</mat-label>
                 <input matInput placeholder="Enter spot price" formControlName="spotPrice">
-                <mat-icon matPrefix>extension</mat-icon>
+                <mat-icon matPrefix>attach_money</mat-icon>
                 <mat-error *ngIf="sportPriceForm.controls['spotPrice'].errors?.['required']" class="alert">Spot price is required</mat-error>
               </mat-form-field>
             </div>
