--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -117,5 +117,9 @@
   </div>
   <div class="resetButton">
     <button mat-raised-button color="primary" type="submit"(click)="reset()">Reset</button>
+  </div><br>
+  <div>
+    <h4 style="position:absolute; width:90%; margin-top: 2px;"><u>Instrument Progress :</u></h4>
+    <textarea class="instrumentProgress" [disabled]="true" [ngModel]="instrumentProgress"></textarea>
   </div>
 </div>
