--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -51,7 +51,6 @@
   </div><br>
 </div>
 
-
 <div *ngIf="displayTab2" class="displayTab2">
   <div style="position: absolute;margin-top: 100px;" class="inputcontainer">
     <mat-card>
@@ -121,5 +120,12 @@
   <div>
     <h4 style="position:absolute; width:90%; margin-top: 2px;"><u>Instrument Progress :</u></h4>
     <textarea class="instrumentProgress" [disabled]="true" [ngModel]="instrumentProgress"></textarea>
+  </div>
+</div>
+
+<div *ngIf="displayTab3" class="displayTab3">
+  <br><br>
+  <div>
+    <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>
   </div>
 </div>
