--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -124,7 +124,9 @@
 </div>
 
 <div *ngIf="displayTab3" class="displayTab3">
-  <br><br>
+  <div>
+    <br><br>
+  </div>
   <div>
     <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart>
   </div>
