--- a/src/main/root/src/app/app.component.css
+++ b/src/main/root/src/app/app.component.css
@@ -82,9 +82,18 @@ body {
 }
 
 .displayTab2 .addInstrumentButton {
-  margin-top: -15px;
+  margin-top: -1%;
   margin-left: 18%;
   color: blue;
+  position: relative;
+}
+
+.displayTab2 .generateSetButton {
+  margin-top: -6%;
+  margin-left: 54%;
+  color: blue;
+  width: 100%;
+  position: relative;
 }
 
 .displayTab2 .generatePriceButton {
