Final code for screen-2.

--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -109,7 +109,7 @@
               <button mat-raised-button color="primary" type="submit" [disabled]="!spotPriceForm.valid">Generate Price</button>
             </div>
             <div>
-              Option/ Predicted Price: {{newSpotPrice}}
+              Option/ Predicted Price: {{predictedPrice}}
             </div>
           </form>
         </mat-card-content>
