--- a/src/main/root/src/app/app.component.css
+++ b/src/main/root/src/app/app.component.css
@@ -210,6 +210,7 @@ mat-cell {
   border: 1px solid #ccc;
   margin: 0;
   overflow: auto;
+  border-radius: 10px
 }
 
 .filterdListItems li {
@@ -217,6 +218,7 @@ mat-cell {
   border: 1px solid;
   padding: 5px;
   margin: 5px;
+  border-radius: 10px
 }
 
 .filterdListItems li:hover {
