--- a/src/main/root/src/app/app.component.css
+++ b/src/main/root/src/app/app.component.css
@@ -208,7 +208,7 @@ mat-cell {
   height: 200px;
   padding: 5px;
   border: 1px solid #ccc;
-  margin: 0;
+  margin: 4px 0 0 0 ;
   overflow: auto;
   border-radius: 10px
 }
@@ -244,10 +244,23 @@ mat-cell {
   z-index: 5;
 }
 .maskBlock img {
-    position: absolute;
-    width: 130px;
-    height: 130px;
-    left: 45%;
-    top: 30%;
-    z-index: 100;
+  position: absolute;
+  width: 130px;
+  height: 130px;
+  left: 45%;
+  top: 30%;
+  z-index: 100;
+}
+
+.clearFilter {
+  top: -9%;
+  left: 86%;
+}
+
+
+.matIconClose {
+  cursor: pointer;
+  position: absolute;
+    right: 10px;
+    top: -29px
 }
